--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				
 				<h4>Uno De Los Principales Objetivos Del Ovi Es Potencializar  Los Conceptos Basicos Para El Desarrollo E  Implementacion De La Seguridad Informatica
 				
-				<br> <br>De Igual Manera Conocer Por Medio De Información Sobre Vulnerabilidades Al No Tener Claro la Seguridad Informática</h4>
+				<br> <br>De Igual Manera Conocer Por Medio De Informacion Sobre Vulnerabilidades Al No Tener Claro la Seguridad Informatica</h4>
 
 			</div>
 			
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 		<aside>
-			 <a class="twitter-timeline" data-width="275" data-height="420" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			 <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Universidad UNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</aside>
 
 
@@ -100,11 +100,7 @@
 	<footer id="foot" class="container-fluid text-center foot">
         <div class="col-md-3 footer-brand animated fadeInLeft">
             <h4>Contador De Visitas</h4>
-				<div id="sfcyl2s6xbmj7pc27geh7s3rxnkggu4gula"></div>
-			<script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=yl2s6xbmj7pc27geh7s3rxnkggu4gula&down=async" async></script>
-			<noscript>
-				<a href="https://www.contadorvisitasgratis.com" title="contador de visitas para pagina web gratis"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=yl2s6xbmj7pc27geh7s3rxnkggu4gula" border="0" title="contador de visitas para pagina web gratis" alt="contador de visitas para pagina web gratis"></a>
-			</noscript>
+				<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=tarea3colaborativo.github.io/colaborativo/&digit=style/plain/6/&reloads=0" alt="web hit counter free" title="web hit counter free" border="0"></a><br /><a href="http://www.reliablecounter.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">Visitantes</a>
 			
         </div>
         <div class="col-md-6 footer-nav animated fadeInUp" style="text-align:center;">
