--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 		<aside>
-			 <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Universidad UNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			 <a class="twitter-timeline" data-width="275" data-height="420" data-dnt="true" href="https://twitter.com/UniversidadUNAD">Universidad UNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</aside>
 
 
