--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	<footer id="foot" class="container-fluid text-center foot">
         <div class="col-md-3 footer-brand animated fadeInLeft">
             <h4>Contador De Visitas</h4>
-				<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=tarea3colaborativo.github.io/colaborativo/&digit=style/plain/6/&reloads=0" alt="web hit counter free" title="web hit counter free" border="0"></a><br /><a href="http://www.reliablecounter.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">Visitantes</a>
+				<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=tarea3colaborativo.github.io/colaborativo/&digit=style/plain/6/&reloads=0" alt="" title="" border="0"></a><br /><a href="#" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">Visitantes</a>
 			
         </div>
         <div class="col-md-6 footer-nav animated fadeInUp" style="text-align:center;">
