--- a/index.html
+++ b/index.html
@@ -19,24 +19,23 @@
   			<div>
       				<ul id="hmenu">        					
 						<li><a href="index.html">Inicio</a></li>
-							<li><a href="lectura.html">Lectura</a>
+							<li><a href="#">Lectura</a>
 								<ul class="sub-menu">
-								  <li><a href="#">Seguridad Informatica</a></li>
-								  <li><a href="#">Vulnerabilidades</a></li>
-								  <li><a href="#">Sitemas De Seguriad</a></li>
-								  <li><a href="#">Pagina 4</a></li>
-								  <li><a href="#">Pagina 5</a></li>
+								  <li><a href="seguridad.html">Seguridad Informatica</a></li>
+								  <li><a href="vulnerabilidad.html">Vulnerabilidades</a></li>
+								  <li><a href="sistema.html">Sitemas De Seguriad</a></li>
+								 
 								</ul>
 							</li>
-							<li><a href="multimedia.html">Multimedia</a>
+							<li><a href="#">Multimedia</a>
 								<ul>
-								  <li><a href="#">Cibierseguridad</a></li>
-								  <li><a href="#">Sistemas De Auditoria</a></li>
+								  <li><a href="ciberseguridad.html">Cibierseguridad</a></li>
+								  <li><a href="auditoria.html">Sistemas De Auditoria</a></li>
 								</ul>
 							</li>
-							<li><a href="autores.html">Autores</a>
+							<li><a href="#">Autores</a>
 									<ul>
-									  <li><a href="#">Alexander Escobar</a></li>
+									  <li><a href="paginas/Alexander.html">Alexander Escobar</a></li>
 									 <li><a href="#">Estudiante 2</a></li>
 									 <li><a href="#">Estudiante 3</a></li>
 									 <li><a href="#">Estudiante 4</a></li>
