--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 						<li><a href="index.html">Inicio</a></li>
 							<li><a href="#">Lectura</a>
 								<ul class="sub-menu">
-								  <li><a href="seguridad.html">Seguridad Informatica</a></li>
-								  <li><a href="vulnerabilidad.html">Vulnerabilidades</a></li>
-								  <li><a href="sistema.html">Sitemas De Seguriad</a></li>
+								  <li><a href="paginas/seguridad.html">Seguridad Informatica</a></li>
+								  <li><a href="paginas/vulnerabilidad.html">Vulnerabilidades</a></li>
+								  <li><a href="paginas/sistema.html">Sitemas De Seguriad</a></li>
 								 
 								</ul>
 							</li>
 							<li><a href="#">Multimedia</a>
 								<ul>
-								  <li><a href="ciberseguridad.html">Cibierseguridad</a></li>
-								  <li><a href="auditoria.html">Sistemas De Auditoria</a></li>
+								  <li><a href="paginas/ciberseguridad.html">Cibierseguridad</a></li>
+								  <li><a href="paginas/auditoria.html">Sistemas De Auditoria</a></li>
 								</ul>
 							</li>
 							<li><a href="#">Autores</a>
