--- a/paginas/seguridad.html
+++ b/paginas/seguridad.html
@@ -61,13 +61,13 @@
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			La seguridad informática también conocida como ciberseguridad  un área que está plenamente enfocada en la protección de la información contra cualquier riesgo ya sea un ataque de un virus o robo de información por tercereas persona 
+			La seguridad informatica tambien conocida como ciberseguridad  un area que esta plenamente enfocada en la proteccion de la informacion contra cualquier riesgo ya sea un ataque de un virus o robo de informacion por tercereas persona 
 			<br><br>
 			<br>
-			Para protegernos debemos de tener claros unas serie de estándares y compromisos como son tener programas licenciados y efectivamente comprobados por un proveedor tecnológico, contar con los protocolos, reglas altamente establecidos   
+			Para protegernos debemos de tener claros unas serie de estandares y compromisos como son tener programas licenciados y efectivamente comprobados por un proveedor tecnologico, contar con los protocolos, reglas altamente establecidos   
 			<br><br>
 			<br>
-			La seguridad informática nos permite crear diferentes criterios como son las restricciones o autorizaciones a diferentes sitios o información a por personas previamente autorizadas evitando que personas con otros fines vulneren o destruyan la información  
+			La seguridad informatica nos permite crear diferentes criterios como son las restricciones o autorizaciones a diferentes sitios o informacion a por personas previamente autorizadas evitando que personas con otros fines vulneren o destruyan la informacion  
 
 			</h4>
 		</div>
