--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -61,31 +61,31 @@
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			En el mercado existen muchos tipos de programas o sistemas operativos para el control de la seguridad informática a continuación se detallan unos de los más comunes para el control, protección y auditoria 
-<br>
-<br>
-<br>
+			En el mercado existen muchos tipos de programas o sistemas operativos para el control de la seguridad informatica a continuacion se detallan unos de los mas comunes para el control, proteccion y auditoria 
+			<br>
+			<br>
+			<br>
 
-Los Siguientes son sistemas operativos vasados en la plataforma de linux:
-<br>
-<br>
+			Los Siguientes son sistemas operativos vasados en la plataforma de linux:
+			<br>
+			<br>
 
-Kali Linux
-<br>
-<br>
-WifiSlax 
-<br><br>
-Ubuntu 
-<br><br><br>
+			Kali Linux
+			<br>
+			<br>
+			WifiSlax 
+			<br><br>
+			Ubuntu 
+			<br><br><br>
 
 
-Los Siguientes son  Antivirus
-<br><br>
-AVG
-<br><br>
-Kaspersky 
-<br><br>
-McAfee
+			Los Siguientes son  Antivirus
+			<br><br>
+			AVG
+			<br><br>
+			Kaspersky 
+			<br><br>
+			McAfee
 
 
 			</h4>
