--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -54,7 +54,7 @@
 		<br>
 		<br>
 		<br>
-		<h1 class="pacifico">Sistemas Y Programas Utilizados Para La Protección </h1>
+		<h1 class="pacifico">Sistemas Y Programas Utilizados Para La Proteccion </h1>
 		<br>
 		
 		<br>
