--- a/paginas/auditoria.html
+++ b/paginas/auditoria.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="utf-8">
 	
-	<title>Sistemas</title>
+	<title>Auritoria</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -54,40 +54,27 @@
 		<br>
 		<br>
 		<br>
-		<h1 class="pacifico">Sistemas Y Programas Utilizados Para La Proteccion </h1>
+		<h1 class="pacifico">Sistemas De Auditoria</h1>
 		<br>
 		
 		<br>
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			En el mercado existen muchos tipos de programas o sistemas operativos para el control de la seguridad informatica a continuacion se detallan unos de los mas comunes para el control, proteccion y auditoria 
-			<br>
-			<br>
-			<br>
-
-			Los Siguientes son sistemas operativos vasados en la plataforma de linux:
-			<br>
-			<br>
-
 			Kali Linux
 			<br>
+			<img src="../img/Kali.png" width="300" height="300"/>
 			<br>
-			WifiSlax 
-			<br><br>
-			Ubuntu 
-			<br><br><br>
-
-
-			Los Siguientes son  Antivirus
-			<br><br>
-			AVG
-			<br><br>
-			Kaspersky 
-			<br><br>
-			McAfee
-
-
+			<br>
+			WifiSlax
+			<br>
+			<img src="../img/ubuntu.png" width="300" height="300"/>
+			<br>
+			<br>
+			Ubuntu
+			<br>
+			<img src="../img/wifislax.png" width="300" height="300"/>
+			
 			</h4>
 		</div>
 		<br>
