--- a/paginas/ciberseguridad.html
+++ b/paginas/ciberseguridad.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="utf-8">
 	
-	<title>Sistemas</title>
+	<title>CiberSeguridad</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -54,40 +54,23 @@
 		<br>
 		<br>
 		<br>
-		<h1 class="pacifico">Sistemas Y Programas Utilizados Para La Proteccion </h1>
+		<h1 class="pacifico">Ciberseguridad</h1>
 		<br>
 		
 		<br>
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			En el mercado existen muchos tipos de programas o sistemas operativos para el control de la seguridad informatica a continuacion se detallan unos de los mas comunes para el control, proteccion y auditoria 
+			<iframe width="453" height="380" src="https://www.youtube.com/embed/EHjmxujXIaQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			
+			
 			<br>
 			<br>
-			<br>
-
-			Los Siguientes son sistemas operativos vasados en la plataforma de linux:
-			<br>
-			<br>
-
-			Kali Linux
+			<iframe width="452" height="380" src="https://www.youtube.com/embed/Z1mWmy-iSmc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			
 			<br>
 			<br>
-			WifiSlax 
-			<br><br>
-			Ubuntu 
-			<br><br><br>
-
-
-			Los Siguientes son  Antivirus
-			<br><br>
-			AVG
-			<br><br>
-			Kaspersky 
-			<br><br>
-			McAfee
-
-
+			<iframe width="453" height="380" src="https://www.youtube.com/embed/rAR3HBodLQ4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</h4>
 		</div>
 		<br>
