--- a/paginas/Alexander.html
+++ b/paginas/Alexander.html
@@ -19,7 +19,7 @@
     	<nav>
   			<div>
       				<ul id="hmenu">        					
-						<li><a href="index.html">Inicio</a></li>
+						<li><a href="../index.html">Inicio</a></li>
 							<li><a href="#">Lectura</a>
 								<ul class="sub-menu">
 								  <li><a href="seguridad.html">Seguridad Informatica</a></li>
