--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 								  <li><a href="paginas/auditoria.html">Sistemas De Auditoria</a></li>
 								</ul>
 							</li>
+							<li><a href="#">Actividades</a>
+									<ul>
+									  <li><a href="#">Actividades 1</a></li>
+									 <li><a href="#">Actividades 2</a></li>
+									 <li><a href="#">Actividades 3</a></li>
+							
+									</ul>
+							</li>
 							<li><a href="#">Autores</a>
 									<ul>
 									  <li><a href="paginas/Alexander.html">Alexander Escobar</a></li>
