--- a/paginas/antivirus.html
+++ b/paginas/antivirus.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="utf-8">
 	
-	<title>Vulnerabilidades</title>
+	<title>Antivirus</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -60,40 +60,26 @@
 		<br>
 		<br>
 		<br>
-		<h1 class="pacifico">Vulnerabilidades</h1>
+		<h1 class="pacifico">Antivirus</h1>
 		<br>
 		
 		<br>
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			Las siguientes son unas de las principales vulnerabilidades que no se tienen siempre en cuenta lo cual facilitan que terceras personas manipulen la informacion sin previa autorizacion 
+			Los antivirus son programas cuyo objetivo es detectar o eliminar virus informaticos. con el transcurso del tiempo, la aparicion de sistemas operativos mas avanzados e internet, los antivirus han evolucionado hacia programas mas avanzados que ademas de buscar y detectar virus informaticos consiguen bloquearlos, desinfectar archivos y prevenir una infeccion de los mismos. actualmente son capaces de reconocer otros tipos de malware como spyware, gusanos, troyanos, rootkits, etc.
 			<br>
 			<br>
-			<br>
-			-	Puntos de acceso remotos no seguros 
-			<br>
-			<br>
-			-	Los hosts que ejecutan servicios innecesarios 
+			A Continuancion Se Nombran Unos Cuantos Antivirus 
 			<br>
 			<br>
-			-	Contrasenas reutilizadas 
+			AVG
 			<br>
+			Avast
 			<br>
-			-	Los Cortafuegos Deshabilitados
+			Norton 
 			<br>
-			<br>
-			-	Control de acceso inadecuado al router 
-			<br>
-			<br>
-			-	Servicios De Internet Mal Configurados 
-			<br> 
-			<br> 
-			-	Sistemas Y Programas De Seguridad 
-			<br>
-			<br>
-			-	Antivirus desactualizados 
-
+			McAfee
 			</h4>
 		</div>
 		<br>
