--- a/paginas/hacker.html
+++ b/paginas/hacker.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="utf-8">
 	
-	<title>Vulnerabilidades</title>
+	<title>Hacker</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -60,40 +60,19 @@
 		<br>
 		<br>
 		<br>
-		<h1 class="pacifico">Vulnerabilidades</h1>
+		<h1 class="pacifico">Hacker</h1>
 		<br>
 		
 		<br>
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			Las siguientes son unas de las principales vulnerabilidades que no se tienen siempre en cuenta lo cual facilitan que terceras personas manipulen la informacion sin previa autorizacion 
-			<br>
-			<br>
-			<br>
-			-	Puntos de acceso remotos no seguros 
-			<br>
-			<br>
-			-	Los hosts que ejecutan servicios innecesarios 
-			<br>
-			<br>
-			-	Contrasenas reutilizadas 
-			<br>
-			<br>
-			-	Los Cortafuegos Deshabilitados
-			<br>
-			<br>
-			-	Control de acceso inadecuado al router 
-			<br>
-			<br>
-			-	Servicios De Internet Mal Configurados 
-			<br> 
-			<br> 
-			-	Sistemas Y Programas De Seguridad 
-			<br>
-			<br>
-			-	Antivirus desactualizados 
+			Un hacker es una persona que por sus avanzados conocimientos en el area de informatica tiene un desempeno extraordinario en el tema y es capaz de realizar muchas actividades desafiantes e ilicitas desde un ordenador. veremos en seguida cuales son los aspectos mas sobresalientes de este tipo de personas.<br>
+		<br>
+		<br>
 
+			Un hacker en plenitud tiene la capacidad de dominar en un buen porcentaje varios aspectos como: lenguajes de programacion, manipulacion de hadware & software, telecomunicaciones, y demas; todo esto lo pueden realizar para lucrarse, darse a conocer, por motivacion, pasatiempo o para realizar actividades sin fines lucrativos.
+			
 			</h4>
 		</div>
 		<br>
