--- a/paginas/juegos.html
+++ b/paginas/juegos.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="utf-8">
 	
-	<title>Vulnerabilidades</title>
+	<title>Juegos</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -60,40 +60,30 @@
 		<br>
 		<br>
 		<br>
-		<h1 class="pacifico">Vulnerabilidades</h1>
+		<h1 class="pacifico">Juegos Seguridad Informatica</h1>
 		<br>
 		
 		<br>
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			Las siguientes son unas de las principales vulnerabilidades que no se tienen siempre en cuenta lo cual facilitan que terceras personas manipulen la informacion sin previa autorizacion 
+			Juego definiciones seguridad informatica 
+			<br>
+			<img src="../img/5.jpg" width="300" height="300"/>
+			<br>
+			<a href="https://www.cerebriti.com/juegos-de-tecnologia/definiciones-seguridad">Enlace</a>
 			<br>
 			<br>
+			
+			Juego CiberSeguridad Para Niños
 			<br>
-			-	Puntos de acceso remotos no seguros 
+			<img src="../img/6.jpg" width="300" height="300"/>
 			<br>
-			<br>
-			-	Los hosts que ejecutan servicios innecesarios 
-			<br>
-			<br>
-			-	Contrasenas reutilizadas 
+			<a href="https://beinternetawesome.withgoogle.com/es-419/interland">Enlace</a>
 			<br>
 			<br>
-			-	Los Cortafuegos Deshabilitados
-			<br>
-			<br>
-			-	Control de acceso inadecuado al router 
-			<br>
-			<br>
-			-	Servicios De Internet Mal Configurados 
-			<br> 
-			<br> 
-			-	Sistemas Y Programas De Seguridad 
-			<br>
-			<br>
-			-	Antivirus desactualizados 
-
+			
+			
 			</h4>
 		</div>
 		<br>
