--- a/paginas/sopas.html
+++ b/paginas/sopas.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="utf-8">
 	
-	<title>Vulnerabilidades</title>
+	<title>Sopa</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -60,41 +60,31 @@
 		<br>
 		<br>
 		<br>
-		<h1 class="pacifico">Vulnerabilidades</h1>
+		<h1 class="pacifico">Sopas De Letras Seguridad Informatica</h1>
 		<br>
 		
 		<br>
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			Las siguientes son unas de las principales vulnerabilidades que no se tienen siempre en cuenta lo cual facilitan que terceras personas manipulen la informacion sin previa autorizacion 
+			Sopa de letras informatica
+			<br>
+			<img src="../img/3.jpg" width="300" height="300"/>
+			<br>
+			<a href="https://www.epasatiempos.es/sopas-de-letras-tematicas.php?sl=123">Enlace</a>
 			<br>
 			<br>
+			
+			Sopa de letras seguridad informatica
 			<br>
-			-	Puntos de acceso remotos no seguros 
+			<img src="../img/4.jpg" width="300" height="300"/>
 			<br>
-			<br>
-			-	Los hosts que ejecutan servicios innecesarios 
-			<br>
-			<br>
-			-	Contrasenas reutilizadas 
+			<a href="https://es.educaplay.com/es/recursoseducativos/2676631/seguridad_informatica.htm">Enlace</a>
 			<br>
 			<br>
-			-	Los Cortafuegos Deshabilitados
-			<br>
-			<br>
-			-	Control de acceso inadecuado al router 
-			<br>
-			<br>
-			-	Servicios De Internet Mal Configurados 
-			<br> 
-			<br> 
-			-	Sistemas Y Programas De Seguridad 
-			<br>
-			<br>
-			-	Antivirus desactualizados 
-
 			</h4>
+			
+			
 		</div>
 		<br>
 		<aside>
