--- a/paginas/Alexander.html
+++ b/paginas/Alexander.html
@@ -37,7 +37,7 @@
 							</li>
 							<li><a href="#">Actividades</a>
 									<ul>
-									  <li><a href="crucigramas.html">Crucigramas</a></li>
+									  <li><a href="crucigrama.html">Crucigramas</a></li>
 									 <li><a href="sopas.html">Sopas De Letras</a></li>
 									 <li><a href="juegos.html">Juegos</a></li>
 							
