--- a/paginas/crucigrama.html
+++ b/paginas/crucigrama.html
@@ -69,7 +69,7 @@
 			<h4>
 			Crucigrama seguridad informatica
 			<br>
-			<img src="../img/1.jpg" width="300" height="300"/>
+			<img src="../img/1.JPG" width="400" height="300"/>
 			<br>
 			<a href="https://es.educaplay.com/es/recursoseducativos/587678/seguridad_informatica.htm">Enlace</a>
 			<br>
@@ -78,7 +78,7 @@
 			
 			Crucigrama informatica
 			<br>
-			<img src="../img/2.jpg" width="300" height="300"/>
+			<img src="../img/2.JPG" width="400" height="300"/>
 			<br>
 			<a href="http://www.areatecnologia.com/crucigrama-informatica.htm">Enlace</a>
 			<br>
