--- a/paginas/juegos.html
+++ b/paginas/juegos.html
@@ -36,7 +36,7 @@
 							</li>
 							<li><a href="#">Actividades</a>
 									<ul>
-									  <li><a href="crucigramas.html">Crucigramas</a></li>
+									  <li><a href="crucigrama.html">Crucigramas</a></li>
 									 <li><a href="sopas.html">Sopas De Letras</a></li>
 									 <li><a href="juegos.html">Juegos</a></li>
 							
@@ -69,7 +69,7 @@
 			<h4>
 			Juego definiciones seguridad informatica 
 			<br>
-			<img src="../img/5.jpg" width="300" height="300"/>
+			<img src="../img/5.JPG" width="400" height="300"/>
 			<br>
 			<a href="https://www.cerebriti.com/juegos-de-tecnologia/definiciones-seguridad">Enlace</a>
 			<br>
@@ -77,7 +77,7 @@
 			
 			Juego CiberSeguridad Para Niños
 			<br>
-			<img src="../img/6.jpg" width="300" height="300"/>
+			<img src="../img/6.JPG" width="400" height="300"/>
 			<br>
 			<a href="https://beinternetawesome.withgoogle.com/es-419/interland">Enlace</a>
 			<br>
