--- a/paginas/sopas.html
+++ b/paginas/sopas.html
@@ -36,7 +36,7 @@
 							</li>
 							<li><a href="#">Actividades</a>
 									<ul>
-									  <li><a href="crucigramas.html">Crucigramas</a></li>
+									  <li><a href="crucigrama.html">Crucigramas</a></li>
 									 <li><a href="sopas.html">Sopas De Letras</a></li>
 									 <li><a href="juegos.html">Juegos</a></li>
 							
@@ -69,7 +69,7 @@
 			<h4>
 			Sopa de letras informatica
 			<br>
-			<img src="../img/3.jpg" width="300" height="300"/>
+			<img src="../img/3.JPG" width="400" height="300"/>
 			<br>
 			<a href="https://www.epasatiempos.es/sopas-de-letras-tematicas.php?sl=123">Enlace</a>
 			<br>
@@ -77,7 +77,7 @@
 			
 			Sopa de letras seguridad informatica
 			<br>
-			<img src="../img/4.jpg" width="300" height="300"/>
+			<img src="../img/4.JPG" width="400" height="300"/>
 			<br>
 			<a href="https://es.educaplay.com/es/recursoseducativos/2676631/seguridad_informatica.htm">Enlace</a>
 			<br>
