--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</li>
 							<li><a href="#">Actividades</a>
 									<ul>
-									  <li><a href="paginas/crucigramas.html">Crucigramas</a></li>
+									  <li><a href="paginas/crucigrama.html">Crucigramas</a></li>
 									 <li><a href="paginas/sopas.html">Sopas De Letras</a></li>
 									 <li><a href="paginas/juegos.html">Juegos</a></li>
 							
