--- a/paginas/Alexander.html
+++ b/paginas/Alexander.html
@@ -65,7 +65,7 @@
             <!-- Microformats! -->
         
             <h1 class="fn">Alexander Escobar</h1>
-        
+				<img src="../img/foto.png" width="400" height="300"/>
             <p>
                 Numero Celular: <span class="tel">3174987409</span><br />
                 Email: <a class="email" href="mailto:greatoldone@lovecraft.com">alex.escobar104@hotmail.com</a>
