--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<meta name="google-site-verification" content="-s36l2Spgm8y07xE8nDd2RYoz49KFqUE0lJPdAbbHSk" />
 </head>
 <body>	
 <script src="js/pajaritoTwitterVolador.js" type="text/javascript"></script><script type="text/javascript">var birdSprite='https://sites.google.com/site/pczeros/Home/pajaritoTwitterVolando.png';var targetElems=new Array('img','hr','table','td','div','input','textarea','button','select','ul','ol','li','h1','h2','h3','h4','p','code','object','a','b','strong','span');var twitterAccount = 'https://twitter.com/UniversidadUNAD';var twitterThisText ='';tripleflapInit();</script>
